--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,3 +12,20 @@ footer {
     width: 100%;
     background-color: #093174;
 }
+
+.gallery-info {
+    text-align: center;
+    display: block;
+    font-size: 12px;
+    opacity: 0.7;
+    font-style: italic;
+}
+
+.header .lead {
+    max-width: 620px;
+}
+
+.gallery-item img {
+    width: 200px;
+    padding: 2px;
+}
