--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,6 @@
 <div class="container-fluid">
   <%= yield %>
 </div>
-<%= render 'layouts/footer' %>
+<%#= render 'layouts/footer' %>
 </body>
 </html>
