--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,10 +18,10 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <form class="d-flex">
-          <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <%= form_with(url: images_path, method: :get, class: 'd-flex') do |f| %>
+          <%= f.text_field :query, class: 'form-control m2-2', placeholder: 'Search', 'aria-label': 'Search' %>
+          <%= f.submit :search, class: 'btn btn-primary me-2' %>
+        <% end %>
       </div>
     </div>
   </nav>
