--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,17 +1,1 @@
-<span class="gallery-info">Click on any image to open lightGallery. </span>
-<div class="container-fluid">
-  <div class="row justify-content-center">
-    <div class="col col-md-12 text-center">
-      <div class="gallery-container" id="animated-thumbnails-gallery">
-        <% @images.each.with_index do |image| %>
-          <a id="<%= image.id %>" data-lg-size=" 340-240" class="gallery-item"
-             data-src="<%= image.url %>"
-             data-sub-html="<h4>Image- <a href='<%= image.url %>'><%= image.id %>.png </a></h4>
-          <p> IPFS - <a href='<%= image.ipfs %>'><%= image.ipfs %></a></p>">
-            <img alt="<%= image.id %>" class="img-responsive" src="<%= image.url %>"/>
-          </a>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "images", images: @images %>
