--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,8 +18,8 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <%= form_with(url: images_path, method: :get, class: 'd-flex') do |f| %>
-          <%= f.text_field :query, class: 'form-control m2-2', placeholder: 'Search', 'aria-label': 'Search' %>
+        <%= form_with(url: images_path, method: :get, class: 'd-flex', data: { controller: "search-form", turbo_frame: "images", turbo_action: 'advance' }) do |f| %>
+          <%= f.text_field :query, class: 'form-control m2-2', placeholder: 'Search', 'aria-label': 'Search', data: { action: "input->search-form#search" } %>
           <%= f.submit :search, class: 'btn btn-primary me-2' %>
         <% end %>
       </div>
