--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,3 +1,3 @@
-<a id="<%= dom_id image %>" href="<%= image.url %>">
-  <img src="<%= image.url %>>"/>
+<a id="<%= dom_id image %>" href="<%= image.url %>" data-lightbox="jungle" class="gallery-item">
+  <img src="<%= image.thumbnail %>>"/>
 </a>
