--- a/app/views/images/_images.html.erb
+++ b/app/views/images/_images.html.erb
@@ -2,6 +2,7 @@
   <div class="col col-md-10">
     <%= turbo_frame_tag "images" do %>
       <%= render images %>
+      <%= render 'shared/pager', pagy: @pagy %>
     <% end %>
   </div>
 </div>
