Made the search always available and made the images centered.

--- a/app/views/images/_images.html.erb
+++ b/app/views/images/_images.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col col-md-10">
+  <div class="col col-md-10 text-center">
     <%= turbo_frame_tag "images" do %>
       <%= render images %>
       <%= render 'shared/pager', pagy: @pagy %>
