--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,12 +18,12 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+      </div>
+      <div class="" id="navbarExample02">
         <%= form_with(url: images_path, method: :get, class: 'd-flex', data: { controller: "search-form", turbo_frame: "images" }) do |f| %>
           <div class="form-outline">
             <%= f.text_field :query, id: 'query', class: 'form-control', 'aria-label': 'Search', data: { action: "input->search-form#search" } %>
-            <!--            <input id="search-input" type="search" id="form1" class="form-control"/>-->
             <%= f.label 'Search', for: 'query', class: 'form-label' %>
-            <!--            <label class="form-label" for="form1">Search</label>-->
           </div>
         <% end %>
       </div>
