--- a/app/views/shared/_pager.html.erb
+++ b/app/views/shared/_pager.html.erb
@@ -1,7 +1,7 @@
 <div id="pager" class="container">
   <div class="row justify-content-between mt-2">
     <div class="col-4">
-      <div class="d-flex position-relative justify-content-end">
+      <div class="d-flex position-relative justify-content-center">
         <% if @pagy.next %>
           <%= link_to images_path(page: @pagy.next), class: "btn btn-primary", data: {
             turbo_frame: "page_handler",
