--- a/app/views/images/_images.html.erb
+++ b/app/views/images/_images.html.erb
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center mt-4">
   <div class="col col-md-10 text-center">
     <%= turbo_frame_tag "page_handler" %>
     <div id="images">
