Added a loaded gif and sizes and changed lightbox loading.

--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,5 +1,5 @@
 <a id="<%= dom_id image %>" href="<%= image.url %>" data-lightbox="jungle" class="gallery-item"
    data-title="<p>#<%= image.identifier %><a href='<%= image.url %>' target='_blank' class='ms-3'>
    <i class='fa-solid fa-arrow-up-right-from-square'></i>  Download</a> <a href='<%= image.ipfs %>' class='ms-3' target='_blank'><i class='fa-solid fa-arrow-up-right-from-square'></i>  Download IPFS</a></p>">
-  <img src="<%= image.thumbnail %>>" alt="<%= image.identifier %>"/>
+  <img src="<%= image.thumbnail %>>" alt="<%= image.identifier %> " class="loading"/>
 </a>
