--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -28,3 +28,17 @@ footer {
 .navbar-brand img {
     height: 40px;
 }
+
+.gallery-item img {
+    height: 168px;
+    width: 168px;
+}
+
+.loading {
+    background: transparent url('https://dl.dropbox.com/s/7t3f6dwilka3ajc/Spinner-1s-48px.gif') center no-repeat;
+}
+
+/*custom lightbox*/
+.lb-outerContainer {
+    background-color: #262626;;
+}
